--- a/about-insect.html
+++ b/about-insect.html
@@ -18,18 +18,48 @@
     <meta name="twitter:description" content="곤충상 테스트의 목적과 방법, 그리고 각 곤충상의 특징에 대해 자세히 알아봅니다.">
     <meta name="twitter:image" content="https://anse-sample1.pages.dev/favicon.svg">
 
-    <link rel="stylesheet" href="style.css">
-    <noscript><link rel="stylesheet" href="style.css"></noscript>
-    <link rel="icon" type="image/x-icon" href="fa.ico">
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-C8QR98TVTB"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <!-- Styles from korea-sentiment.html -->
+    <link rel="stylesheet" href="style.css"/>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
 
-  gtag('config', 'G-C8QR98TVTB');
-</script>
+    <!-- Tailwind CSS and Fonts from korea-sentiment.html -->
+    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&amp;display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
+    <script id="tailwind-config">
+            tailwind.config = {
+                darkMode: "class",
+                theme: {
+                    extend: {
+                        colors: {
+                            "primary": "#3d84f5",
+                            "background-light": "#f5f7f8",
+                            "background-dark": "#101722",
+                        },
+                        fontFamily: {
+                            "display": ["Inter", "sans-serif"]
+                        },
+                        borderRadius: {"DEFAULT": "0.25rem", "lg": "0.5rem", "xl": "0.75rem", "full": "9999px"},
+                    },
+                },
+            }
+        </script>
+    <style>
+            body { font-family: 'Inter', sans-serif; }
+            .material-symbols-outlined { font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'OPSZ' 24; }
+            .gauge-gradient {
+                background: conic-gradient(from 180deg at 50% 100%, #f87171 0deg, #fbbf24 90deg, #3d84f5 180deg);
+            }
+        </style>
+    <!-- Google Analytics and Clarity scripts from korea-sentiment.html -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-C8QR98TVTB"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-C8QR98TVTB');
+    </script>
     <script type="text/javascript">
         (function(c,l,a,r,i,t,y){
             c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
@@ -37,6 +67,7 @@
             y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
         })(window, document, "clarity", "script", "v2qmp0i82b");
     </script>
+    <!-- LD+JSON script from about-insect.html -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -53,17 +84,34 @@
     </script>
 </head>
 <body>
-    <header class="container">
-        <h1><a href="/">오늘 저녁 뭐 먹지?</a></h1>
-        <nav style="display:flex; justify-content:center;">
-            <a href="/insect.html">곤충상 테스트</a>
-            <a href="/about-insect.html">곤충상이란?</a>
-            <a href="/sentiment.html">미국 금융 시장 심리</a>
-            <a href="/korea-sentiment.html">한국 금융시장 심리</a>
-        </nav>
-    </header>
-    <p style="font-size:5px"> </p>
-    <main class="container">
+<!-- Header from korea-sentiment.html, adjusted for about-insect.html -->
+<header class="sticky top-0 z-50 w-full border-b border-solid border-[#e7ecf4] dark:border-[#1e293b] bg-white/80 dark:bg-background-dark/80 backdrop-blur-md">
+<div class="mx-auto flex max-w-[1200px] items-center justify-between px-6 py-3">
+<div class="flex items-center gap-8">
+<div class="flex items-center gap-3">
+<div class="flex h-8 w-8 items-center justify-center rounded-lg bg-primary text-white">
+<span class="material-symbols-outlined text-[20px]">psychology</span>
+</div>
+<h2 class="text-lg font-bold tracking-tight dark:text-white">곤충상이란?</h2>
+</div>
+<nav class="hidden md:flex items-center gap-6">
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/index.html">오늘 저녁 뭐 먹지?</a>
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/insect.html">곤충상 테스트</a>
+<a class="text-sm font-semibold text-primary" href="/about-insect.html">곤충상이란?</a>
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/sentiment.html">미국 금융 시장 심리</a>
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/korea-sentiment.html">한국 금융시장 심리</a>
+</nav>
+</div>
+<div class="flex items-center gap-4">
+
+<button class="flex h-10 w-10 items-center justify-center rounded-lg bg-[#f0f3f9] dark:bg-slate-800 text-[#0d131c] dark:text-white">
+<span class="material-symbols-outlined">notifications</span>
+</button>
+<div class="h-10 w-10 rounded-full bg-cover bg-center ring-2 ring-primary/20" data-alt="User profile avatar" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuBneBh9BK99BKx2b26Ln0wWAXSWA-NkKD-lrrv98lVK_rJdPXTgQuGmdvqczD3UIKISPcMnzpf-BQOdedWBnyulZOQWc1ciJwX7DT6PMhaFrVawJq4F6y18XmDN29W32bH_6CzaUWabwqtdTvTlUIGfSvw74jtRHl327xyGMcu_5I55ABKEDpKDaOoVeIFo8NUFPEGK3dONKg3bls3I7AJT26lh-N-OCbGYRo4N6cdwNSvECRXQfW82pZjHea9vnYNYvU8yp9ZTwnIf')"></div>
+</div>
+</div>
+</header>
+<main class="mx-auto max-w-[1200px] px-6 py-8">
         <article>
             <h2>곤충상이란?</h2>
             <p>곤충상 테스트는 AI 기술을 활용하여 당신의 얼굴에서 특정 곤충과 유사한 특징을 찾아내는 흥미로운 테스트입니다. 이는 과학적 근거보다는 재미와 심리적인 측면에 초점을 맞춘 콘텐츠입니다.</p>
@@ -75,22 +123,22 @@
             <h3>각 곤충상의 특징은 무엇인가요?</h3>
             <ul>
                 <li>
-                    <strong><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Crect width='20' height='20' fill='%23FFC107'/%3E%3Ctext x='10' y='15' font-size='10' text-anchor='middle' fill='%23FFFFFF'%3E🐜%3C/text%3E%3C/svg%3E" alt="개미 이미지" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 5px;">개미상:</strong> 부지런하고 협동심이 강한 인상을 줍니다. 목표 지향적이고 현실적인 성향을 가집니다.
+                    <strong><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Crect width='20' height='20' fill='%2364748B'/%3E%3Ctext x='10' y='15' font-size='10' text-anchor='middle' fill='%23FFFFFF'%3E🐜%3C/text%3E%3C/svg%3E" alt="개미 이미지" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 5px;">개미상:</strong> 부지런하고 협동심이 강한 인상을 줍니다. 목표 지향적이고 현실적인 성향을 가집니다.
                 </li>
                 <li>
-                    <strong><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Crect width='20' height='20' fill='%23FFEB3B'/%3E%3Ctext x='10' y='15' font-size='10' text-anchor='middle' fill='%23000000'%3E🐝%3C/text%3E%3C/svg%3E" alt="벌 이미지" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 5px;">벌상:</strong> 활발하고 에너지가 넘치며, 리더십 있는 모습을 보입니다. 사회성이 뛰어나고 책임감이 강합니다.
+                    <strong><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Crect width='20' height='20' fill='%2364748B'/%3E%3Ctext x='10' y='15' font-size='10' text-anchor='middle' fill='%23FFFFFF'%3E🐝%3C/text%3E%3C/svg%3E" alt="벌 이미지" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 5px;">벌상:</strong> 활발하고 에너지가 넘치며, 리더십 있는 모습을 보입니다. 사회성이 뛰어나고 책임감이 강합니다.
                 </li>
                 <li>
-                    <strong><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Crect width='20' height='20' fill='%2303A9F4'/%3E%3Ctext x='10' y='15' font-size='10' text-anchor='middle' fill='%23FFFFFF'%3E🦋%3C/text%3E%3C/svg%3E" alt="나비 이미지" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 5px;">나비상:</strong> 아름답고 섬세하며, 자유로운 영혼을 가진 인상을 줍니다. 예술적 감각이 뛰어나고 변화를 즐깁니다.
+                    <strong><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Crect width='20' height='20' fill='%2364748B'/%3E%3Ctext x='10' y='15' font-size='10' text-anchor='middle' fill='%23FFFFFF'%3E🦋%3C/text%3E%3C/svg%3E" alt="나비 이미지" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 5px;">나비상:</strong> 아름답고 섬세하며, 자유로운 영혼을 가진 인상을 줍니다. 예술적 감각이 뛰어나고 변화를 즐깁니다.
                 </li>
                 <li>
-                    <strong><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Crect width='20' height='20' fill='%234CAF50'/%3E%3Ctext x='10' y='15' font-size='10' text-anchor='middle' fill='%23FFFFFF'%3E🦗%3C/text%3E%3C/svg%3E" alt="사마귀 이미지" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 5px;">사마귀상:</strong> 날카롭고 카리스마 있는 인상을 줍니다. 집중력이 좋고 목표를 향해 끈기 있게 나아가는 성향이 있습니다.
+                    <strong><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Crect width='20' height='20' fill='%2364748B'/%3E%3Ctext x='10' y='15' font-size='10' text-anchor='middle' fill='%23FFFFFF'%3E🦗%3C/text%3E%3C/svg%3E" alt="사마귀 이미지" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 5px;">사마귀상:</strong> 날카롭고 카리스마 있는 인상을 줍니다. 집중력이 좋고 목표를 향해 끈기 있게 나아가는 성향이 있습니다.
                 </li>
                 <li>
-                    <strong><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Crect width='20' height='20' fill='%23B71C1C'/%3E%3Ctext x='10' y='15' font-size='10' text-anchor='middle' fill='%23FFFFFF'%3E🐞%3C/text%3E%3C/svg%3E" alt="무당벌레 이미지" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 5px;">무당벌레상:</strong> 귀엽고 친근하며, 긍정적인 에너지를 발산합니다. 주변 사람들에게 행복을 주는 유쾌한 성격입니다.
+                    <strong><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Crect width='20' height='20' fill='%2364748B'/%3E%3Ctext x='10' y='15' font-size='10' text-anchor='middle' fill='%23FFFFFF'%3E🐞%3C/text%3E%3C/svg%3E" alt="무당벌레 이미지" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 5px;">무당벌레상:</strong> 귀엽고 친근하며, 긍정적인 에너지를 발산합니다. 주변 사람들에게 행복을 주는 유쾌한 성격입니다.
                 </li>
                 <li>
-                    <strong><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Crect width='20' height='20' fill='%23FF9800'/%3E%3Ctext x='10' y='15' font-size='10' text-anchor='middle' fill='%23FFFFFF'%3E🪲%3C/text%3E%3C/svg%3E" alt="장수풍뎅이 이미지" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 5px;">장수풍뎅이상:</strong> 튼튼하고 묵직한 인상을 주며, 강인함과 안정감을 가집니다. 신뢰할 수 있고 든든한 타입입니다.
+                    <strong><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 20 20'%3E%3Crect width='20' height='20' fill='%2364748B'/%3E%3Ctext x='10' y='15' font-size='10' text-anchor='middle' fill='%23FFFFFF'%3E🪲%3C/text%3E%3C/svg%3E" alt="장수풍뎅이 이미지" style="width: 20px; height: 20px; vertical-align: middle; margin-right: 5px;">장수풍뎅이상:</strong> 튼튼하고 묵직한 인상을 주며, 강인함과 안정감을 가집니다. 신뢰할 수 있고 든든한 타입입니다.
                 </li>
             </ul>
             <p>결과는 가볍게 즐겨주세요. 당신의 숨겨진 곤충 매력을 발견하는 시간이 되기를 바랍니다!</p>
@@ -109,10 +157,21 @@
 
     <div id="disqus_thread"></div>
 
-    <footer class="container">
-        <p>Last updated: 2026년 1월 17일</p>
-        <p><a href="/privacy.html">개인정보처리방침</a></p>
-    </footer>
+<!-- Footer from korea-sentiment.html, adjusted for about-insect.html -->
+<footer class="mt-12 border-t border-[#e7ecf4] dark:border-[#1e293b] pt-8 pb-12">
+<div class="flex flex-wrap items-center justify-between gap-6 text-[#49699c] dark:text-slate-500">
+<div class="flex flex-col gap-2">
+<p class="text-sm font-medium">곤충상 테스트의 목적과 방법, 그리고 각 곤충상의 특징에 대해 자세히 알아봅니다.</p>
+<p class="max-w-md text-xs leading-relaxed">본 테스트는 재미를 목적으로 하며, 결과는 과학적 근거가 없습니다.</p>
+</div>
+<div class="flex gap-4">
+<a href="/privacy.html" class="flex items-center gap-2 rounded-lg bg-[#e7ecf4] dark:bg-slate-800 px-4 py-2 text-sm font-bold text-[#0d131c] dark:text-white hover:opacity-80">
+<span class="material-symbols-outlined text-[18px]">policy</span>
+                        개인정보처리방침
+                    </a>
+</div>
+</div>
+</footer>
 
     <script>
         // Disqus configuration (remains unchanged)
