--- a/index.html
+++ b/index.html
@@ -20,56 +20,101 @@
     <meta name="twitter:description" content="오늘 저녁 메뉴가 고민될 때, 버튼 하나로 간편하게 한식, 중식, 일식 등 다양한 저녁 메뉴를 추천받으세요.">
     <meta name="twitter:image" content="https://anse-sample1.pages.dev/favicon.svg">
 
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="fa.ico">
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-C8QR98TVTB"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <link rel="stylesheet" href="style.css"/>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
 
-  gtag('config', 'G-C8QR98TVTB');
-</script>
+    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&amp;display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
+    <script id="tailwind-config">
+            tailwind.config = {
+                darkMode: "class",
+                theme: {
+                    extend: {
+                        colors: {
+                            "primary": "#3d84f5",
+                            "background-light": "#f5f7f8",
+                            "background-dark": "#101722",
+                        },
+                        fontFamily: {
+                            "display": ["Inter", "sans-serif"]
+                        },
+                        borderRadius: {"DEFAULT": "0.25rem", "lg": "0.5rem", "xl": "0.75rem", "full": "9999px"},
+                    },
+                },
+            }
+        </script>
+    <style>
+            body { font-family: 'Inter', sans-serif; }
+            .material-symbols-outlined { font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'OPSZ' 24; }
+            .gauge-gradient {
+                background: conic-gradient(from 180deg at 50% 100%, #f87171 0deg, #fbbf24 90deg, #3d84f5 180deg);
+            }
+        </style>
+
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-C8QR98TVTB"></script>
+    <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+          gtag('config', 'G-C8QR98TVTB');
+        </script>
+
     <script type="text/javascript">
-        (function(c,l,a,r,i,t,y){
-            c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
-            t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
-            y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
-        })(window, document, "clarity", "script", "v2qmp0i82b");
-    </script>
+            (function(c,l,a,r,i,t,y){
+                c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
+                t=l.createElement(r);t.async=1;t.src="https://www.clarity.ms/tag/"+i;
+                y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
+            })(window, document, "clarity", "script", "v2qmp0i82b");
+        </script>
+
     <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "Article",
-      "headline": "오늘 저녁 뭐 먹지? - AI 기반 저녁 메뉴 추천기",
-      "url": "https://anse-sample1.pages.dev/",
-      "description": "AI가 추천하는 오늘 저녁 메뉴. 버튼 하나로 간편하게 한식, 중식, 일식 등 다양한 저녁 메뉴를 추천받으세요.",
-      "datePublished": "2026-01-17",
-      "author": {
-        "@type": "Person",
-        "name": "anse"
-      }
-    }
-    </script>
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9750321636945438"
-     crossorigin="anonymous"></script>
-    <meta name="google-adsense-account" content="ca-pub-9750321636945438">
+        {
+          "@context": "https://schema.org",
+          "@type": "Article",
+          "headline": "오늘 저녁 뭐 먹지? - AI 기반 저녁 메뉴 추천기",
+          "url": "https://anse-sample1.pages.dev/",
+          "description": "AI가 추천하는 오늘 저녁 메뉴. 버튼 하나로 간편하게 한식, 중식, 일식 등 다양한 저녁 메뉴를 추천받으세요.",
+          "datePublished": "2026-01-17",
+          "author": {
+            "@type": "Person",
+            "name": "anse"
+          }
+        }
+        </script>
+        <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9750321636945438"
+         crossorigin="anonymous"></script>
+        <meta name="google-adsense-account" content="ca-pub-9750321636945438">
 </head>
 <body>
-    <header class="container">
-        <div class="theme-switcher-container">
-            <button id="theme-switcher">Toggle Theme</button>
-        </div>
-        <h1><a href="/">오늘 저녁 뭐 먹지?</a></h1>
-        <nav style="display:flex; justify-content:center;">
-            <a href="/insect.html">곤충상 테스트</a>
-            <a href="/about-insect.html">곤충상이란?</a>
-            <a href="/sentiment.html">미국 금융 시장 심리</a>
-            <a href="/korea-sentiment.html">한국 금융시장 심리</a>
-        </nav>
-    </header>
-    <p style="font-size:5px"> </p>
+<!-- Top Navigation Bar -->
+<header class="sticky top-0 z-50 w-full border-b border-solid border-[#e7ecf4] dark:border-[#1e293b] bg-white/80 dark:bg-background-dark/80 backdrop-blur-md">
+<div class="mx-auto flex max-w-[1200px] items-center justify-between px-6 py-3">
+<div class="flex items-center gap-8">
+<div class="flex items-center gap-3">
+<div class="flex h-8 w-8 items-center justify-center rounded-lg bg-primary text-white">
+<span class="material-symbols-outlined text-[20px]">restaurant_menu</span>
+</div>
+<h2 class="text-lg font-bold tracking-tight dark:text-white">오늘 저녁 뭐 먹지?</h2>
+</div>
+<nav class="hidden md:flex items-center gap-6">
+<a class="text-sm font-semibold text-primary" href="/index.html">오늘 저녁 뭐 먹지?</a>
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/insect.html">곤충상 테스트</a>
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/about-insect.html">곤충상이란?</a>
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/sentiment.html">미국 금융 시장 심리</a>
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/korea-sentiment.html">한국 금융시장 심리</a>
+</nav>
+</div>
+<div class="flex items-center gap-4">
+
+<button class="flex h-10 w-10 items-center justify-center rounded-lg bg-[#f0f3f9] dark:bg-slate-800 text-[#0d131c] dark:text-white">
+<span class="material-symbols-outlined">notifications</span>
+</button>
+<div class="h-10 w-10 rounded-full bg-cover bg-center ring-2 ring-primary/20" data-alt="User profile avatar" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuBneBh9BK99BKx2b26Ln0wWAXSWA-NkKD-lrrv98lVK_rJdPXTgQuGmdvqczD3UIKISPcMnzpf-BQOdedWBnyulZOQWc1ciJwX7DT6PMhaFrVawJq4F6y18XmDN29W32bH_6CzaUWabwqtdTvTlUIGfSvw74jtRHl327xyGMcu_5I55ABKEDpKDaOoVeIFo8NUFPEGK3dONKg3bls3I7AJT26lh-N-OCbGYRo4N6cdwNSvECRXQfW82pZjHea9vnYNYvU8yp9ZTwnIf')"></div>
+</div>
+</div>
+</header>
+
 
     <main class="container">
         <article>
@@ -140,10 +185,20 @@
 
     <div id="disqus_thread"></div>
 
-    <footer class="container">
-        <p>Last updated: 2026년 1월 17일</p>
-        <p><a href="/privacy.html">개인정보처리방침</a></p>
-    </footer>
+<footer class="mt-12 border-t border-[#e7ecf4] dark:border-[#1e293b] pt-8 pb-12">
+<div class="flex flex-wrap items-center justify-between gap-6 text-[#49699c] dark:text-slate-500">
+<div class="flex flex-col gap-2">
+<p class="text-sm font-medium">AI가 추천하는 오늘 저녁 메뉴. 버튼 하나로 간편하게 한식, 중식, 일식 등 다양한 저녁 메뉴를 추천받으세요.</p>
+<p class="max-w-md text-xs leading-relaxed">본 추천기의 메뉴 리스트는 대한민국 인기 외식 메뉴 및 배달 음식 데이터를 기반으로 작성되었습니다. (기준일: 2026년 1월)</p>
+</div>
+<div class="flex gap-4">
+<a href="/privacy.html" class="flex items-center gap-2 rounded-lg bg-[#e7ecf4] dark:bg-slate-800 px-4 py-2 text-sm font-bold text-[#0d131c] dark:text-white hover:opacity-80">
+<span class="material-symbols-outlined text-[18px]">policy</span>
+                        개인정보처리방침
+                    </a>
+</div>
+</div>
+</footer>
 
     <script>
 const generateBtn = document.getElementById('generate');
