--- a/insect.html
+++ b/insect.html
@@ -18,17 +18,126 @@
     <meta property="twitter:description" content="AI가 당신의 얼굴을 분석하여 어떤 곤충상에 가까운지 알려드립니다.">
     <meta property="twitter:image" content="https://anse-sample1.pages.dev/favicon.svg">
 
-    <link rel="stylesheet" href="style.css">
-    <link rel="icon" type="image/x-icon" href="fa.ico">
-    <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-C8QR98TVTB"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <!-- Styles from korea-sentiment.html -->
+    <link rel="stylesheet" href="style.css"/>
+    <link rel="icon" type="image/x-icon" href="images/favicon.ico"/>
 
-  gtag('config', 'G-C8QR98TVTB');
-</script>
+    <!-- Tailwind CSS and Fonts from korea-sentiment.html -->
+    <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;900&amp;display=swap" rel="stylesheet"/>
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL@100..700,0..1&amp;display=swap" rel="stylesheet"/>
+    <script id="tailwind-config">
+            tailwind.config = {
+                darkMode: "class",
+                theme: {
+                    extend: {
+                        colors: {
+                            "primary": "#3d84f5",
+                            "background-light": "#f5f7f8",
+                            "background-dark": "#101722",
+                        },
+                        fontFamily: {
+                            "display": ["Inter", "sans-serif"]
+                        },
+                        borderRadius: {"DEFAULT": "0.25rem", "lg": "0.5rem", "xl": "0.75rem", "full": "9999px"},
+                    },
+                },
+            }
+        </script>
+    <style>
+            body { font-family: 'Inter', sans-serif; }
+            .material-symbols-outlined { font-variation-settings: 'FILL' 0, 'wght' 400, 'GRAD' 0, 'OPSZ' 24; }
+            .gauge-gradient {
+                background: conic-gradient(from 180deg at 50% 100%, #f87171 0deg, #fbbf24 90deg, #3d84f5 180deg);
+            }
+            .image-preview-container {
+                max-width: 100%; /* Max width */
+                width: 20em; /* Responsive width */
+                height: 20em; /* Maintain aspect ratio */
+                margin: 20px auto; /* Center the image preview */
+                border-radius: 10px;
+                overflow: hidden;
+                box-shadow: 0 4px 8px var(--shadow-color);
+                display: flex; /* Use flexbox to center image vertically/horizontally */
+                justify-content: center;
+                align-items: center;
+                background-color: var(--background-light-start); /* Placeholder background */
+            }
+            .image-preview-container img {
+                max-width: 100%; /* Ensure image fits container */
+                max-height: 100%;
+                object-fit: contain; /* Contain the entire image */
+                display: block;
+            }
+            .prediction-graph {
+                margin-top: 30px;
+                width: 100%;
+                max-width: 500px;
+                text-align: left;
+                margin-left: auto;
+                margin-right: auto;
+            }
+            .prediction-bar-container {
+                display: flex;
+                align-items: center;
+                margin-bottom: 8px;
+                font-size: 0.9em;
+                color: var(--text-color-dark);
+            }
+            .prediction-bar-label {
+                flex-basis: 120px;
+                margin-right: 10px;
+                font-weight: bold;
+            }
+            .prediction-bar {
+                flex-grow: 1;
+                height: 20px;
+                background-color: var(--prediction-bar-background);
+                border-radius: 3px;
+                position: relative;
+                overflow: hidden;
+            }
+            .prediction-bar-fill {
+                height: 100%;
+                background: linear-gradient(90deg, var(--light-green), var(--primary-green));
+                transition: width 0.5s ease-out;
+                display: flex;
+                align-items: center;
+                justify-content: flex-end;
+                padding-right: 5px;
+                color: var(--text-color-dark);
+                font-size: 0.8em;
+                box-sizing: border-box;
+            }
+            .insect-features {
+                margin-top: 30px;
+                text-align: left;
+                padding: 20px;
+                background-color: var(--background-light-start);
+                border-radius: 10px;
+                box-shadow: 0 2px 4px var(--shadow-color);
+            }
+            .insect-features h3 {
+                text-align: center;
+                color: var(--dark-green);
+            }
+            .insect-features p {
+                font-size: 1em;
+                line-height: 1.8;
+            }
+        </style>
+    <!-- Teachable Machine scripts specific to insect.html -->
+    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
+    <!-- Google Analytics and Clarity scripts from korea-sentiment.html -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-C8QR98TVTB"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-C8QR98TVTB');
+    </script>
     <script type="text/javascript">
         (function(c,l,a,r,i,t,y){
             c[a]=c[a]||function(){(c[a].q=c[a].q||[]).push(arguments)};
@@ -36,6 +145,7 @@
             y=l.getElementsByTagName(r)[0];y.parentNode.insertBefore(t,y);
         })(window, document, "clarity", "script", "v2qmp0i82b");
     </script>
+    <!-- LD+JSON script from insect.html -->
     <script type="application/ld+json">
     {
       "@context": "https://schema.org",
@@ -48,98 +158,36 @@
       "browserRequirements": "Requires HTML5 support"
     }
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@latest/dist/tf.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@teachablemachine/image@latest/dist/teachablemachine-image.min.js"></script>
-    <style>
-        .image-preview-container {
-            max-width: 100%; /* Max width */
-            width: 20em; /* Responsive width */
-            height: 20em; /* Maintain aspect ratio */
-            margin: 20px auto; /* Center the image preview */
-            border-radius: 10px;
-            overflow: hidden;
-            box-shadow: 0 4px 8px var(--shadow-color);
-            display: flex; /* Use flexbox to center image vertically/horizontally */
-            justify-content: center;
-            align-items: center;
-            background-color: var(--background-light-start); /* Placeholder background */
-        }
-        .image-preview-container img {
-            max-width: 100%; /* Ensure image fits container */
-            max-height: 100%;
-            object-fit: contain; /* Contain the entire image */
-            display: block;
-        }
-        .prediction-graph {
-            margin-top: 30px;
-            width: 100%;
-            max-width: 500px;
-            text-align: left;
-            margin-left: auto;
-            margin-right: auto;
-        }
-        .prediction-bar-container {
-            display: flex;
-            align-items: center;
-            margin-bottom: 8px;
-            font-size: 0.9em;
-            color: var(--text-color-dark);
-        }
-        .prediction-bar-label {
-            flex-basis: 120px;
-            margin-right: 10px;
-            font-weight: bold;
-        }
-        .prediction-bar {
-            flex-grow: 1;
-            height: 20px;
-            background-color: var(--prediction-bar-background);
-            border-radius: 3px;
-            position: relative;
-            overflow: hidden;
-        }
-        .prediction-bar-fill {
-            height: 100%;
-            background: linear-gradient(90deg, var(--light-green), var(--primary-green));
-            transition: width 0.5s ease-out;
-            display: flex;
-            align-items: center;
-            justify-content: flex-end;
-            padding-right: 5px;
-            color: var(--text-color-dark);
-            font-size: 0.8em;
-            box-sizing: border-box;
-        }
-        .insect-features {
-            margin-top: 30px;
-            text-align: left;
-            padding: 20px;
-            background-color: var(--background-light-start);
-            border-radius: 10px;
-            box-shadow: 0 2px 4px var(--shadow-color);
-        }
-        .insect-features h3 {
-            text-align: center;
-            color: var(--dark-green);
-        }
-        .insect-features p {
-            font-size: 1em;
-            line-height: 1.8;
-        }
-    </style>
 </head>
 <body>
-    <header class="container">
-        <h1><a href="/">오늘 저녁 뭐 먹지?</a></h1>
-        <nav style="display:flex; justify-content: center;"">
-            <a href="/insect.html">곤충상 테스트</a>
-            <a href="/about-insect.html">곤충상이란?</a>
-            <a href="/sentiment.html">미국 금융 시장 심리</a>
-            <a href="/korea-sentiment.html">한국 금융시장 심리</a>
-        </nav>
-    </header>
-    <p style="font-size:5px"> </p>
-    <main class="container">
+<!-- Header from korea-sentiment.html, adjusted for insect.html -->
+<header class="sticky top-0 z-50 w-full border-b border-solid border-[#e7ecf4] dark:border-[#1e293b] bg-white/80 dark:bg-background-dark/80 backdrop-blur-md">
+<div class="mx-auto flex max-w-[1200px] items-center justify-between px-6 py-3">
+<div class="flex items-center gap-8">
+<div class="flex items-center gap-3">
+<div class="flex h-8 w-8 items-center justify-center rounded-lg bg-primary text-white">
+<span class="material-symbols-outlined text-[20px]">bug_report</span>
+</div>
+<h2 class="text-lg font-bold tracking-tight dark:text-white">곤충상 테스트</h2>
+</div>
+<nav class="hidden md:flex items-center gap-6">
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/index.html">오늘 저녁 뭐 먹지?</a>
+<a class="text-sm font-semibold text-primary" href="/insect.html">곤충상 테스트</a>
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/about-insect.html">곤충상이란?</a>
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/sentiment.html">미국 금융 시장 심리</a>
+<a class="text-sm font-medium text-[#49699c] dark:text-slate-400 hover:text-primary transition-colors" href="/korea-sentiment.html">한국 금융시장 심리</a>
+</nav>
+</div>
+<div class="flex items-center gap-4">
+
+<button class="flex h-10 w-10 items-center justify-center rounded-lg bg-[#f0f3f9] dark:bg-slate-800 text-[#0d131c] dark:text-white">
+<span class="material-symbols-outlined">notifications</span>
+</button>
+<div class="h-10 w-10 rounded-full bg-cover bg-center ring-2 ring-primary/20" data-alt="User profile avatar" style="background-image: url('https://lh3.googleusercontent.com/aida-public/AB6AXuBneBh9BK99BKx2b26Ln0wWAXSWA-NkKD-lrrv98lVK_rJdPXTgQuGmdvqczD3UIKISPcMnzpf-BQOdedWBnyulZOQWc1ciJwX7DT6PMhaFrVawJq4F6y18XmDN29W32bH_6CzaUWabwqtdTvTlUIGfSvw74jtRHl327xyGMcu_5I55ABKEDpKDaOoVeIFo8NUFPEGK3dONKg3bls3I7AJT26lh-N-OCbGYRo4N6cdwNSvECRXQfW82pZjHea9vnYNYvU8yp9ZTwnIf')"></div>
+</div>
+</div>
+</header>
+<main class="container">
         <article>
             <h2>나는 어떤 곤충상일까?</h2>
             <p>AI가 당신의 얼굴 사진을 분석하여 당신의 곤충상을 찾아드립니다. 지금 바로 테스트해보세요!</p>
@@ -183,10 +231,21 @@
 
     <div id="disqus_thread"></div>
 
-    <footer class="container">
-        <p>Last updated: 2026년 1월 17일</p>
-        <p><a href="/privacy.html">개인정보처리방침</a></p>
-    </footer>
+<!-- Footer from korea-sentiment.html, adjusted for insect.html -->
+<footer class="mt-12 border-t border-[#e7ecf4] dark:border-[#1e293b] pt-8 pb-12">
+<div class="flex flex-wrap items-center justify-between gap-6 text-[#49699c] dark:text-slate-500">
+<div class="flex flex-col gap-2">
+<p class="text-sm font-medium">AI가 당신의 얼굴을 분석하여 어떤 곤충상에 가까운지 알려드립니다.</p>
+<p class="max-w-md text-xs leading-relaxed">본 테스트는 재미를 목적으로 하며, 결과는 과학적 근거가 없습니다.</p>
+</div>
+<div class="flex gap-4">
+<a href="/privacy.html" class="flex items-center gap-2 rounded-lg bg-[#e7ecf4] dark:bg-slate-800 px-4 py-2 text-sm font-bold text-[#0d131c] dark:text-white hover:opacity-80">
+<span class="material-symbols-outlined text-[18px]">policy</span>
+                        개인정보처리방침
+                    </a>
+</div>
+</div>
+</footer>
 
     <script type="text/javascript">
         const URL = "https://teachablemachine.withgoogle.com/models/_oRwiza95/";
