--- a/korea-sentiment.html
+++ b/korea-sentiment.html
@@ -209,9 +209,10 @@
 <!-- Comparison Cards -->
 <div class="grid grid-cols-1 gap-4">
 <div class="flex flex-col gap-4 rounded-xl border border-[#e7ecf4] dark:border-[#1e293b] bg-white dark:bg-[#161f2c] p-6 shadow-sm">
+    
     <div class="proverb-display">
         <h4 class="text-sm font-bold text-[#49699c] uppercase tracking-wider mb-4">오늘의 주식 시장 격언</h4>
-        <p id="proverb-text" class="italic text-base text-gray-700 dark:text-gray-300 min-h-[50px] flex items-center justify-center text-center"></p>
+        <p id="proverb-text" class="italic text-base text-gray-800 dark:text-gray-200 min-h-[50px] flex items-center justify-center text-center" style="white-space: pre-wrap;"></p>
         <button id="generate-proverb" class="mt-4 rounded-md bg-primary/10 px-3 py-1 text-xs font-bold text-primary hover:bg-primary/20 transition-colors">새 격언 확인하기</button>
     </div>
 </div>
@@ -583,14 +584,20 @@
         ];
 
         function displayRandomProverb() {
+            console.log('displayRandomProverb function called.');
             const proverbText = document.getElementById('proverb-text');
             if (proverbText) { // Check if element exists before updating
                 const randomIndex = Math.floor(Math.random() * proverbs.length);
-                proverbText.textContent = proverbs[randomIndex];
+                const selectedProverb = proverbs[randomIndex];
+                proverbText.textContent = selectedProverb;
+                console.log('Proverb set:', selectedProverb);
+            } else {
+                console.log('Element with id "proverb-text" not found.');
             }
         }
 
         document.addEventListener('DOMContentLoaded', async () => {
+            console.log('DOMContentLoaded event fired.');
             await fetchLatestIndex(); // Call fetchLatestIndex first
             displayRandomProverb(); // Then display proverb
             const generateProverbButton = document.getElementById('generate-proverb');
