fix: ensure leaderboard icon is white in bright mode in korea-sentiment.html

--- a/korea-sentiment.html
+++ b/korea-sentiment.html
@@ -93,8 +93,8 @@
 <div class="mx-auto flex max-w-[1200px] items-center justify-between px-6 py-3">
 <div class="flex items-center gap-8">
 <div class="flex items-center gap-3">
-<div class="flex h-8 w-8 items-center justify-center rounded-lg bg-primary text-white">
-<span class="material-symbols-outlined text-[20px]">leaderboard</span>
+<div class="flex h-8 w-8 items-center justify-center rounded-lg bg-primary">
+<span class="material-symbols-outlined text-[20px] text-white">leaderboard</span>
 </div>
 <h2 class="text-lg font-bold tracking-tight dark:text-white">KOSPI Fear &amp; Greed</h2>
 </div>
