Force commit to recover status

--- a/public/korea-sentiment.html
+++ b/public/korea-sentiment.html
@@ -251,7 +251,7 @@
 
     <div class="flex flex-col gap-1">
     <div class="flex justify-between text-xs font-bold">
-    <span>Market Volatility</span>
+    <span>Market Volatility2</span>
     <span class="text-red-400">Low</span>
     </div>
     <div class="h-1.5 w-full rounded-full bg-slate-100 dark:bg-slate-800">
