--- a/public/korea-sentiment.html
+++ b/public/korea-sentiment.html
@@ -385,13 +385,25 @@
                         indicators.forEach(item => {
                             const indicatorValue = item.value.toFixed(2);
                             let valueColorClass = "text-[#49699c]"; // Default color for text
+                            let progressBarColorClass = "bg-[#49699c]"; // Default color for progress bar
 
                             // Determine color based on value for progress bar and text
-                            if (item.value <= 25) { valueColorClass = "text-red-400"; }
-                            else if (item.value <= 45) { valueColorClass = "text-orange-400"; }
-                            else if (item.value <= 55) { valueColorClass = "text-yellow-400"; }
-                            else if (item.value <= 75) { valueColorClass = "text-emerald-500"; }
-                            else { valueColorClass = "text-primary"; } // blue for greed
+                            if (item.value <= 25) { 
+                                valueColorClass = "text-red-400";
+                                progressBarColorClass = "bg-red-400";
+                            } else if (item.value <= 45) { 
+                                valueColorClass = "text-orange-400";
+                                progressBarColorClass = "bg-orange-400";
+                            } else if (item.value <= 55) { 
+                                valueColorClass = "text-yellow-400";
+                                progressBarColorClass = "bg-yellow-400";
+                            } else if (item.value <= 75) { 
+                                valueColorClass = "text-emerald-500";
+                                progressBarColorClass = "bg-emerald-500";
+                            } else { 
+                                valueColorClass = "text-primary"; // blue for greed
+                                progressBarColorClass = "bg-primary";
+                            }
 
                             const indicatorHtml = `
                                 <div class="flex flex-col gap-1">
@@ -400,7 +412,7 @@
                                         <span class="${valueColorClass}">${indicatorValue}</span>
                                     </div>
                                     <div class="h-1.5 w-full rounded-full bg-slate-100 dark:bg-slate-800">
-                                        <div class="h-full rounded-full bg-current" style="width: ${indicatorValue}%;"></div>
+                                        <div class="h-full rounded-full ${progressBarColorClass}" style="width: ${indicatorValue}%;"></div>
                                     </div>
                                 </div>
                             `;
