Fix: Refactor market status update function for correct display (temp forced CLOSED)

--- a/public/korea-sentiment.html
+++ b/public/korea-sentiment.html
@@ -325,6 +325,49 @@
             sentimentText.classList.add(textColorClass);
         }
 
+        // KOSPI Market Status Update logic (defined globally for accessibility)
+        function updateKOSPIStatus(marketStatusText, marketStatusDot, marketStatusIndicator) {
+            const now = new Date();
+            const currentUTCDay = now.getUTCDay(); // 0 for Sunday, 1 for Monday, ..., 6 for Saturday
+            const currentUTCHour = now.getUTCHours();
+            const currentUTCMinute = now.getUTCMinutes();
+
+            // KOSPI market hours in UTC: Monday-Friday, 00:00 UTC (9:00 KST) to 06:30 UTC (15:30 KST)
+            const marketOpenUTCHour = 0; // 09:00 KST
+            const marketOpenUTCMinute = 0;
+            const marketCloseUTCHour = 6; // 15:30 KST
+            const marketCloseUTCMinute = 30;
+
+            const isWeekday = currentUTCDay >= 1 && currentUTCDay <= 5; // Monday to Friday UTC
+            
+            let isOpen = false;
+            // Temporarily force MARKET CLOSED for design review
+            isOpen = false; 
+            if (isWeekday) {
+                if (currentUTCHour > marketOpenUTCHour && currentUTCHour < marketCloseUTCHour) {
+                    isOpen = true;
+                } else if (currentUTCHour === marketOpenUTCHour && currentUTCMinute >= marketOpenUTCMinute) {
+                    isOpen = true;
+                } else if (currentUTCHour === marketCloseUTCHour && currentUTCMinute <= marketCloseUTCMinute) {
+                    isOpen = true;
+                }
+            }
+
+            if (isOpen) {
+                marketStatusText.textContent = "MARKET OPEN";
+                marketStatusDot.classList.remove('bg-red-500', 'bg-slate-400');
+                marketStatusDot.classList.add('bg-emerald-500', 'animate-pulse');
+                marketStatusIndicator.classList.remove('bg-slate-100', 'dark:bg-slate-800', 'text-slate-600', 'dark:text-slate-400');
+                marketStatusIndicator.classList.add('bg-emerald-100', 'dark:bg-emerald-900/30', 'text-emerald-600', 'dark:text-emerald-400');
+            } else {
+                marketStatusText.textContent = "MARKET CLOSED";
+                marketStatusDot.classList.remove('bg-emerald-500', 'animate-pulse');
+                marketStatusDot.classList.add('bg-red-500');
+                marketStatusIndicator.classList.remove('bg-emerald-100', 'dark:bg-emerald-900/30', 'text-emerald-600', 'dark:text-slate-400');
+                marketStatusIndicator.classList.add('bg-slate-100', 'dark:bg-slate-800', 'text-slate-600', 'dark:text-slate-400');
+            }
+        }
+
         async function fetchLatestIndex() {
             const scoreEl = document.getElementById('score');
             const statusEl = document.getElementById('status');
@@ -756,51 +799,11 @@
             const marketStatusDot = document.getElementById('market-status-dot');
             const marketStatusIndicator = document.getElementById('market-status-indicator'); // Parent div for color changes
 
-            function updateKOSPIStatus() {
-                const now = new Date();
-                const currentUTCDay = now.getUTCDay(); // 0 for Sunday, 1 for Monday, ..., 6 for Saturday
-                const currentUTCHour = now.getUTCHours();
-                const currentUTCMinute = now.getUTCMinutes();
 
-                // KOSPI market hours in UTC: Monday-Friday, 00:00 UTC (9:00 KST) to 06:30 UTC (15:30 KST)
-                const marketOpenUTCHour = 0; // 09:00 KST
-                const marketOpenUTCMinute = 0;
-                const marketCloseUTCHour = 6; // 15:30 KST
-                const marketCloseUTCMinute = 30;
-
-                const isWeekday = currentUTCDay >= 1 && currentUTCDay <= 5; // Monday to Friday UTC
-                
-                let isOpen = false;
-                // Temporarily force MARKET CLOSED for design review
-                isOpen = false; 
-                if (isWeekday) {
-                    if (currentUTCHour > marketOpenUTCHour && currentUTCHour < marketCloseUTCHour) {
-                        isOpen = true;
-                    } else if (currentUTCHour === marketOpenUTCHour && currentUTCMinute >= marketOpenUTCMinute) {
-                        isOpen = true;
-                    } else if (currentUTCHour === marketCloseUTCHour && currentUTCMinute <= marketCloseUTCMinute) {
-                        isOpen = true;
-                    }
-                }
-
-                if (isOpen) {
-                    marketStatusText.textContent = "MARKET OPEN";
-                    marketStatusDot.classList.remove('bg-red-500', 'bg-slate-400');
-                    marketStatusDot.classList.add('bg-emerald-500', 'animate-pulse');
-                    marketStatusIndicator.classList.remove('bg-slate-100', 'dark:bg-slate-800', 'text-slate-600', 'dark:text-slate-400');
-                    marketStatusIndicator.classList.add('bg-emerald-100', 'dark:bg-emerald-900/30', 'text-emerald-600', 'dark:text-emerald-400');
-                } else {
-                    marketStatusText.textContent = "MARKET CLOSED";
-                    marketStatusDot.classList.remove('bg-emerald-500', 'animate-pulse');
-                    marketStatusDot.classList.add('bg-red-500');
-                    marketStatusIndicator.classList.remove('bg-emerald-100', 'dark:bg-emerald-900/30', 'text-emerald-600', 'dark:text-emerald-400');
-                    marketStatusIndicator.classList.add('bg-slate-100', 'dark:bg-slate-800', 'text-slate-600', 'dark:text-slate-400');
-                }
-            }
 
             // Call it initially and set an interval for updates
-            updateKOSPIStatus();
-            setInterval(updateKOSPIStatus, 60 * 1000); // Update every minute
+            updateKOSPIStatus(marketStatusText, marketStatusDot, marketStatusIndicator);
+            setInterval(() => updateKOSPIStatus(marketStatusText, marketStatusDot, marketStatusIndicator), 60 * 1000); // Update every minute
         });
     </script>
 
